--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
-    "react": "^18.0.0-rc.3",
-    "react-dom": "^18.0.0-rc.3",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-element-to-jsx-string": "^14.3.4",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.49.9",
     "typescript": "^4.6.3"
   },
@@ -32,8 +34,9 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@types/react-dom": "^18.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.4",
@@ -42,7 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.1"
   }
 }
